JumpScript/tests/baselines/reference/letDeclarations-useBeforeDefinition2.errors.txt
tests/cases/compiler/file1.jump(1,1): error TS2448: Block-scoped variable 'l' used before its declaration.


==== tests/cases/compiler/file1.jump (1 errors) ====
    l;
    ~
!!! error TS2448: Block-scoped variable 'l' used before its declaration.
    
==== tests/cases/compiler/file2.jump (0 errors) ====
    const l = 0;